# langchain-notebooks

./: README.md  pyproject.toml
notebooks/basics/: quickstart-ollama.ipynb  quickstart-openai.ipynb
