[tool.poetry]
name = "langchain-notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.2"
langchain-openai = "^0.0.3"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.7.4"
python-dotenv = "^1.0.1"
tavily-python = "^0.3.1"
langchainhub = "^0.1.14"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
